fixed all the nav responsive css issues, made the big title on mobile smaller w/ a tighter line height

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -80,5 +80,7 @@
 @media (max-width: 600px){
     .bigTitle{
         margin-top: 40px;
+        font-size: 3rem;
+        line-height: 120%;
     }
 }
